vlib/v/checker/tests/array_none_element_err.vv
fn main() {
	a := [none]
	println('${a}')
}
